--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/t01-programs.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/t01-programs.html
@@ -1,5 +1,7 @@
 <div class="modal-header">
-    <h3 class="modal-title">Programmes Gros Electroménager</h3>
+    <img class="cr-modal-title-icon" src="/assets/images/modal/topic01_title.png" alt=""/>
+    <img class="cr-modal-title-separator" src="/assets/images/modal/title_verticalSeparator.png" alt=""/>
+    <h3 class="modal-title cr-modal-title-text">Programmes Gros Electroménager</h3>
 </div>
 <div class="modal-body">
 
@@ -14,6 +16,6 @@
     </cr-question>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">Yes</button>
-    <button class="btn btn-warning" ng-click="cancel()">No</button>
+    <button class="btn" ng-click="ok()">Yes</button>
+    <button class="btn" ng-click="cancel()">No</button>
 </div>
