--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -162,45 +162,47 @@
                                 </tab-heading>
 
                                 <div class="col-md-3" >
-                                    <cr-topic active-image="http://lorempixel.com/128/128/sports/1/Active"
-                                    inactive-image="http://lorempixel.com/g/128/128/sports/1/PROGRAMMES"
-                                    hover-image="http://lorempixel.com/128/128/sports/1/Hover"
+                                    <cr-topic
+                                    image="household/topics/topic01"
                                     view="$/angular/views/household/profile/topics/t01-programs.html"
-                                    controller="ModalTopicCtrl"></cr-topic>
+                                    controller="ModalTopicCtrl"
+                                    window-class="cr-theme-blue"
+                                    ></cr-topic>
                                 </div>
 
                                 <div class="col-md-3">
-                                    <cr-topic active-image="http://lorempixel.com/128/128/sports/1/Active"
-                                    inactive-image="http://lorempixel.com/g/128/128/sports/1/PRESENCE"
-                                    hover-image="http://lorempixel.com/128/128/sports/1/Hover"
+                                    <cr-topic
+                                    image="household/topics/topic02"
                                     view="$/angular/views/household/profile/topics/t02-presence.html"
-                                    controller="ModalTopicCtrl"></cr-topic>
+                                    controller="ModalTopicCtrl"
+                                    window-class="cr-theme-green"
+                                    ></cr-topic>
                                 </div>
 
                                 <div class="col-md-3">
-                                    <cr-topic active-image="http://lorempixel.com/128/128/sports/1/Active"
-                                    inactive-image="http://lorempixel.com/g/128/128/sports/1/CHAUFFAGE"
-                                    hover-image="http://lorempixel.com/128/128/sports/1/Hover"
+                                    <cr-topic
+                                    image="household/topics/topic03"
                                     view="$/angular/views/household/profile/topics/t03-heating.html"
-                                    controller="ModalTopicCtrl"></cr-topic>
+                                    controller="ModalTopicCtrl"
+                                    window-class="cr-theme-orange"
+                                    ></cr-topic>
                                 </div>
 
                                 <div class="col-md-3" >
                                     <cr-topic
                                     active="true"
-                                    active-image="http://lorempixel.com/128/128/sports/1/Active"
-                                    inactive-image="http://lorempixel.com/g/128/128/sports/1/ECLAIRAGE"
-                                    hover-image="http://lorempixel.com/128/128/sports/1/Hover"
+                                    image="household/topics/topic04"
                                     view="$/angular/views/household/profile/topics/t04-lighting.html"
-                                    controller="ModalTopicCtrl"></cr-topic>
+                                    controller="ModalTopicCtrl"
+                                    window-class="cr-theme-red"></cr-topic>
                                 </div>
 
                                 <div class="col-md-3">
-                                    <cr-topic active-image="http://lorempixel.com/128/128/sports/1/Active"
-                                    inactive-image="http://lorempixel.com/g/128/128/sports/1/REPAS"
-                                    hover-image="http://lorempixel.com/128/128/sports/1/Hover"
+                                    <cr-topic
+                                    image="household/topics/topic05"
                                     view="$/angular/views/household/profile/topics/t05-dinner.html"
-                                    controller="ModalTopicCtrl"></cr-topic>
+                                    controller="ModalTopicCtrl"
+                                    window-class="cr-theme-magenta"></cr-topic>
                                 </div>
                             </tab>
                         </tabset>
