--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/t05-dinner.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/t05-dinner.html
@@ -1,5 +1,7 @@
 <div class="modal-header">
-    <h3 class="modal-title">Repas</h3>
+    <img class="cr-modal-title-icon" src="/assets/images/modal/topic05_title.png" alt=""/>
+    <img class="cr-modal-title-separator" src="/assets/images/modal/title_verticalSeparator.png" alt=""/>
+    <h3 class="modal-title cr-modal-title-text">Repas</h3>
 </div>
 <div class="modal-body">
     <cr-question label="profile.Q4000.label">
