--- a/app/assets/_cr-question.less
+++ b/app/assets/_cr-question.less
@@ -3,6 +3,6 @@
     margin-bottom: 2em;
     .cr-question-label {
         font-weight: normal;
-        font-style: italic;
+        font-style: normal;
     }
 }
