--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/t03-heating.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/t03-heating.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3 class="modal-title">Chauffage & eau chaude</h3>
+    <h3 class="modal-title" ng-bind-html="'topic.heat.label' | translate"></h3>
 </div>
 <div class="modal-body">
     <cr-question label="Q1600.label">
@@ -8,12 +8,12 @@
     <cr-question label="Q1900.label">
         <cr-slider ng-model="getAnswerValue('Q1900').doubleValue" min="0" max="20000" step="500" filter="toWatts"></cr-slider>
     </cr-question>
+
     <cr-question label="Q1210.label">
-        <cr-slider ng-model="getAnswerValue('Q1210').stringValue" min="0" max="5" step="1"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1210').stringValue" ng-steps="getNumericOptions('Q1210',0,5,1)"></cr-slider>
     </cr-question>
 
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">Yes</button>
-    <button class="btn btn-warning" ng-click="cancel()">No</button>
+    <button class="btn btn-primary" ng-click="close()" ng-bind-html="'generic.close' | translate"></button>
 </div>
