--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/t05-dinner.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/t05-dinner.html
@@ -1,12 +1,20 @@
 <div class="modal-header">
-    <h3 class="modal-title">Repas</h3>
+    <h3 class="modal-title" ng-bind-html="'topic.cook.label' | translate"></h3>
 </div>
 <div class="modal-body">
-    <cr-question label="profile.Q4000.label">
-        <cr-slider ng-model="responses.Q4000.value" ng-steps="slider.schedule.value"></cr-slider>
+
+    <cr-question label="Q1140.label">
+        <cr-slider ng-model="getAnswerValue('Q1140','FIRST').stringValue" ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1140','SECOND').stringValue"  ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1140','THIRD').stringValue" ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
+    </cr-question>
+
+    <cr-question label="Q1150.label">
+        <cr-slider ng-model="getAnswerValue('Q1150','FIRST').stringValue" ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1150','SECOND').stringValue"  ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1150','THIRD').stringValue" ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
     </cr-question>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">Yes</button>
-    <button class="btn btn-warning" ng-click="cancel()">No</button>
+    <button class="btn btn-primary" ng-click="close()" ng-bind-html="'generic.close' | translate"></button>
 </div>
