--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -2,7 +2,7 @@
 @import "_cr-topic";
 @import "_cr-slider";
 @import "_cr-text";
-@import "_modal";
+@import "_cr-modal";
 
 img {
     max-width: 100%;
