--- a/app/assets/_cr-modal.less
+++ b/app/assets/_cr-modal.less
@@ -15,6 +15,9 @@
             .modal-header {
                 background: @color;
                 color: #ffffff;
+
+                white-space: nowrap;
+                overflow-x: hidden;
             }
 
             .btn {
@@ -57,5 +60,4 @@
     height: 36px;
     line-height: 36px;
     vertical-align: middle;
-
 }
