--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -161,7 +161,7 @@
                                     <i class="fa fa-gear"></i> Topic
                                 </tab-heading>
 
-                                <div class="col-md-3" >
+                                <div class="col-md-3 col-sm-4 col-xs-6" >
                                     <cr-topic
                                     image="household/topics/topic01"
                                     view="$/angular/views/household/profile/topics/t01-programs.html"
@@ -170,7 +170,7 @@
                                     ></cr-topic>
                                 </div>
 
-                                <div class="col-md-3">
+                                <div class="col-md-3 col-sm-4 col-xs-6">
                                     <cr-topic
                                     image="household/topics/topic02"
                                     view="$/angular/views/household/profile/topics/t02-presence.html"
@@ -179,7 +179,7 @@
                                     ></cr-topic>
                                 </div>
 
-                                <div class="col-md-3">
+                                <div class="col-md-3 col-sm-4 col-xs-6">
                                     <cr-topic
                                     image="household/topics/topic03"
                                     view="$/angular/views/household/profile/topics/t03-heating.html"
@@ -188,7 +188,7 @@
                                     ></cr-topic>
                                 </div>
 
-                                <div class="col-md-3" >
+                                <div class="col-md-3 col-sm-4 col-xs-6" >
                                     <cr-topic
                                     active="true"
                                     image="household/topics/topic04"
@@ -197,7 +197,7 @@
                                     window-class="cr-theme-red"></cr-topic>
                                 </div>
 
-                                <div class="col-md-3">
+                                <div class="col-md-3 col-sm-4 col-xs-6">
                                     <cr-topic
                                     image="household/topics/topic05"
                                     view="$/angular/views/household/profile/topics/t05-dinner.html"
