profil de consommation - form

--- a/app/eu/factorx/citizens/angular/views/welcome.html
+++ b/app/eu/factorx/citizens/angular/views/welcome.html
@@ -1,8 +1,12 @@
 <div>
-    <p ng-bind-html="'welcome.choose_message' | translate"></p>
-    <button ng-bind-html="'generic.household' | translate"
-            ng-click="toHouseHold()"></button>
 
+    <div style="container">
+        <div style="row">
 
+            <p ng-bind-html="'welcome.choose_message' | translate"></p>
+            <button ng-bind-html="'generic.household' | translate"
+                    ng-click="toHouseHold()"></button>
+        </div>
+    </div>
 
 </div>
