--- a/app/eu/factorx/citizens/angular/views/household/account/registration.html
+++ b/app/eu/factorx/citizens/angular/views/household/account/registration.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3 class="modal-title" ng-bind-html="'profile.powerprovider.title' | translate"></h3>
+    <h3 class="modal-title" ng-bind-html="'account.personaldata.title' | translate"></h3>
 </div>
 <div class="modal-body">
 
