--- a/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
@@ -25,7 +25,7 @@
                     ng-click="openModal('household/profile/topics/t05-dinner')">
             </button>
 
-            <button class="col-md-2" ng-bind-html="'generic.next' | translate"
+            <button class="col-md-2" ng-bind-html="'nav.to-actions' | translate"
                     ng-click="$root.redirectTo('/household-action')">
             </button>
         </div>
