--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/t04-lighting.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/t04-lighting.html
@@ -6,6 +6,9 @@
 <div class="modal-body">
 
     <cr-question label="Q1160.label">
+        <cr-question label="Q2010.label">
+            <cr-slider ng-model="getAnswerValue('Q2010').stringValue" ng-steps="getOptions('Q2010')" vertical="true"></cr-slider>
+        </cr-question>
         <cr-slider ng-model="getAnswerValue('Q1160','FIRST').stringValue" ng-steps="getNumericOptions('Q1160',0,5,1)"></cr-slider>
         <cr-slider ng-model="getAnswerValue('Q1160','SECOND').stringValue"  ng-steps="getNumericOptions('Q1160',0,5,1)"></cr-slider>
         <cr-slider ng-model="getAnswerValue('Q1160','THIRD').stringValue" ng-steps="getNumericOptions('Q1160',0,5,1)"></cr-slider>
