--- a/app/assets/_cr-question.less
+++ b/app/assets/_cr-question.less
@@ -1,7 +1,9 @@
 
 .cr-question {
+    margin-top: 0em;
     margin-bottom: 0em;
     .cr-question-label {
+        margin-top: 2em;
         font-weight: normal;
         font-style: normal;
     }
