--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/t04-lighting.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/t04-lighting.html
@@ -5,11 +5,17 @@
 </div>
 <div class="modal-body">
 
-    <cr-question label="Q1160.label">
-        <cr-slider ng-model="getAnswerValue('Q1160','FIRST').stringValue" ng-steps="getNumericOptions('Q1160',0,5,1)"></cr-slider>
-        <cr-slider ng-model="getAnswerValue('Q1160','SECOND').stringValue"  ng-steps="getNumericOptions('Q1160',0,5,1)"></cr-slider>
-        <cr-slider ng-model="getAnswerValue('Q1160','THIRD').stringValue" ng-steps="getNumericOptions('Q1160',0,5,1)"></cr-slider>
-    </cr-question>
+    <cr-section label="Q1160.label">
+        <cr-question label="18h" inline="true">
+            <cr-slider ng-model="getAnswerValue('Q1160','FIRST').stringValue" ng-steps="getNumericOptions('Q1160',0,5,1)"></cr-slider>
+        </cr-question>
+        <cr-question label="19h" inline="true">
+            <cr-slider ng-model="getAnswerValue('Q1160','SECOND').stringValue"  ng-steps="getNumericOptions('Q1160',0,5,1)"></cr-slider>
+        </cr-question>
+        <cr-question label="20h" inline="true">
+            <cr-slider ng-model="getAnswerValue('Q1160','THIRD').stringValue" ng-steps="getNumericOptions('Q1160',0,5,1)"></cr-slider>
+        </cr-question>
+    </cr-section>
     <cr-question label="Q1220.label">
         <cr-slider ng-model="getAnswerValue('Q1220').stringValue" ng-steps="getNumericOptions('Q1220',0,5,1)"></cr-slider>
     </cr-question>
