--- a/app/assets/_cr-modal.less
+++ b/app/assets/_cr-modal.less
@@ -9,11 +9,16 @@
     .cr-theme-@{name} {
 
         .modal-content {
-            border-radius: 0;
             border: none;
 
             .modal-header {
+                border-top-left-radius: 6px;
+                border-top-right-radius: 6px;
+
+
                 background: @color;
+                background-image: url('/assets/modal/title_gradientBG.png');
+                background-size: 100% 100%;
                 color: #ffffff;
 
                 white-space: nowrap;
