--- a/app/eu/factorx/citizens/angular/views/household/action/topics/t01-action-presence.html
+++ b/app/eu/factorx/citizens/angular/views/household/action/topics/t01-action-presence.html
@@ -1,17 +1,19 @@
 <div class="modal-header">
-    <h3 class="modal-title">Sortir</h3>
+    <img class="cr-modal-title-icon" src="/assets/images/modal/topic01_title.png" alt=""/>
+    <img class="cr-modal-title-separator" src="/assets/images/modal/title_verticalSeparator.png" alt=""/>
+    <h3 class="modal-title cr-modal-title-text" ng-bind-html="topic.presence.label"></h3>
 </div>
 <div class="modal-body">
+
     <cr-question label="Q3210.label">
         <cr-boolean ng-model="getAnswerValue('Q3210').booleanValue"></cr-boolean>
     </cr-question>
 
     <cr-question label="Q3211.label" cr-conditionned="Q3211" >
-        <cr-slider ng-model="getAnswerValue('Q3211').stringValue" ng-steps="[null, '1', '2', '3', '4']"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q3211').stringValue" ng-steps="getNumericOptions('Q3211',1,4,1)"></cr-slider>
     </cr-question>
 
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">Yes</button>
-    <button class="btn btn-warning" ng-click="cancel()">No</button>
+    <button class="btn btn-primary" ng-click="close()" ng-bind-html="'generic.close' | translate"></button>
 </div>
