--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/t02-programs.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/t02-programs.html
@@ -5,21 +5,39 @@
 </div>
 <div class="modal-body">
 
-    <cr-question label="Q1110.label">
-        <cr-slider ng-model="getAnswerValue('Q1110','FIRST').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
-        <cr-slider ng-model="getAnswerValue('Q1110','SECOND').stringValue"  ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
-        <cr-slider ng-model="getAnswerValue('Q1110','THIRD').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
-    </cr-question>
-    <cr-question label="Q1120.label">
-        <cr-slider ng-model="getAnswerValue('Q1120','FIRST').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
-        <cr-slider ng-model="getAnswerValue('Q1120','SECOND').stringValue"  ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
-        <cr-slider ng-model="getAnswerValue('Q1120','THIRD').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
-    </cr-question>
-    <cr-question label="Q1130.label">
-        <cr-slider ng-model="getAnswerValue('Q1130','FIRST').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
-        <cr-slider ng-model="getAnswerValue('Q1130','SECOND').stringValue"  ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
-        <cr-slider ng-model="getAnswerValue('Q1130','THIRD').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
-    </cr-question>
+    <cr-section label="Q1110.label">
+        <cr-question label="period.1.label">
+            <cr-slider ng-model="getAnswerValue('Q1110','FIRST').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
+        </cr-question>
+        <cr-question label="period.2.label">
+            <cr-slider ng-model="getAnswerValue('Q1110','SECOND').stringValue"  ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
+        </cr-question>
+        <cr-question label="period.3.label">
+            <cr-slider ng-model="getAnswerValue('Q1110','THIRD').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
+        </cr-question>
+    </cr-section>
+    <cr-section label="Q1120.label">
+        <cr-question label="period.1.label">
+            <cr-slider ng-model="getAnswerValue('Q1120','FIRST').stringValue" ng-steps="getNumericOptions('Q1120',0,5,1)"></cr-slider>
+        </cr-question>
+        <cr-question label="period.2.label">
+            <cr-slider ng-model="getAnswerValue('Q1120','SECOND').stringValue"  ng-steps="getNumericOptions('Q1120',0,5,1)"></cr-slider>
+        </cr-question>
+        <cr-question label="period.3.label">
+            <cr-slider ng-model="getAnswerValue('Q1120','THIRD').stringValue" ng-steps="getNumericOptions('Q1120',0,5,1)"></cr-slider>
+        </cr-question>
+    </cr-section>
+    <cr-section label="Q1130.label">
+        <cr-question label="period.1.label">
+            <cr-slider ng-model="getAnswerValue('Q1130','FIRST').stringValue" ng-steps="getNumericOptions('Q1130',0,5,1)"></cr-slider>
+        </cr-question>
+        <cr-question label="period.2.label">
+            <cr-slider ng-model="getAnswerValue('Q1130','SECOND').stringValue"  ng-steps="getNumericOptions('Q1130',0,5,1)"></cr-slider>
+        </cr-question>
+        <cr-question label="period.3.label">
+            <cr-slider ng-model="getAnswerValue('Q1130','THIRD').stringValue" ng-steps="getNumericOptions('Q1130',0,5,1)"></cr-slider>
+        </cr-question>
+    </cr-section>
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="close()" ng-bind-html="'generic.close' | translate"></button>
