--- a/app/eu/factorx/citizens/angular/views/household/action/topics/t04-action-lighting.html
+++ b/app/eu/factorx/citizens/angular/views/household/action/topics/t04-action-lighting.html
@@ -1,38 +1,59 @@
 <div class="modal-header">
-    <h3 class="modal-title">Eclairage & électroménager</h3>
+    <img class="cr-modal-title-icon" src="/assets/images/modal/topic01_title.png" alt=""/>
+    <img class="cr-modal-title-separator" src="/assets/images/modal/title_verticalSeparator.png" alt=""/>
+    <h3 class="modal-title cr-modal-title-text" ng-bind-html="topic.light.label"></h3>
 </div>
 <div class="modal-body">
 
-    <cr-question label="Q1160.label">
-        <cr-slider ng-model="Q1160" min="0" max="5" step="1"></cr-slider>
-    </cr-question>
-    <cr-question label="Q1220.label">
-        <cr-slider ng-model="Q1220" min="0" max="5" step="1"></cr-slider>
-    </cr-question>
-    <cr-question label="Q1230.label">
-        <cr-slider ng-model="Q1230" min="0" max="5" step="1"></cr-slider>
-    </cr-question>
-    <cr-question label="Q1700.label">
-        <cr-slider ng-model="Q1700" min="0" max="5" step="1"></cr-slider>
-    </cr-question>
-    <cr-question label="Q1750.label">
-        <cr-slider ng-model="Q1750" vertical="true" ng-steps="[{value: null, label: null}, {value: 1, label:'des lampes LED'},{value: 2, label:' des lampes fluo-compactes'},{value: 3, label:' des lampes halogènes'},{value: 4, label:'des ampoules classiques'}]"></cr-slider>
-    </cr-question>
-    <cr-question label="Q1800.label">
-        <cr-slider ng-model="Q1800" min="0" max="1000" step="10" filter="toWatts"></cr-slider>
+    <cr-question label="Q3410.label"  cr-conditionned="Q3410">
+        <cr-boolean ng-model="getAnswerValue('Q3410').booleanValue"></cr-boolean>
     </cr-question>
 
-    <cr-section label="Q2000.label">
-        <cr-question label="Q2010.label">
-            <cr-slider ng-model="Q2010" vertical="true" ng-steps="[{value: null, label: null},{value: 0, label:'quasiment jamais'},{value: 1, label:'en moyenne 15 minutes par jour'},{value: 2, label:'en moyenne 30 minutes par jour'},{value: 3, label:'en moyenne 45 minutes par jour'},{value: 4, label:'en moyenne 1 heure par jour ou plus'}]"></cr-slider>
-        </cr-question>
-    </cr-section>
+    <cr-question label="Q3420.label" cr-conditionned="Q3420">
+        <cr-boolean ng-model="getAnswerValue('Q3420').booleanValue"></cr-boolean>
+    </cr-question>
+
+    <cr-question label="Q3510.label" cr-conditionned="Q3510">
+        <cr-boolean ng-model="getAnswerValue('Q3510').booleanValue"></cr-boolean>
+    </cr-question>
+
+    <cr-question label="Q3530.label" cr-conditionned="Q3530">
+        <cr-boolean ng-model="getAnswerValue('Q3530').booleanValue"></cr-boolean>
+    </cr-question>
+
+    <cr-question label="Q3610.label" cr-conditionned="Q3610">
+        <cr-boolean ng-model="getAnswerValue('Q3610').booleanValue"></cr-boolean>
+    </cr-question>
+
+
+    <cr-question label="Q3620.label" cr-conditionned="Q3620">
+        <cr-boolean ng-model="getAnswerValue('Q3620').booleanValue"></cr-boolean>
+    </cr-question>
+
+
+    <cr-question label="Q3630.label" cr-conditionned="Q3630">
+        <cr-boolean ng-model="getAnswerValue('Q3630').booleanValue"></cr-boolean>
+    </cr-question>
+
+
+    <cr-question label="Q3631.label" cr-conditionned="Q3631">
+        <cr-boolean ng-model="getAnswerValue('Q3631').booleanValue"></cr-boolean>
+    </cr-question>
+
+
+    <cr-question label="Q3640.label" cr-conditionned="Q3640">
+        <cr-boolean ng-model="getAnswerValue('Q3640').booleanValue"></cr-boolean>
+    </cr-question>
+
+
+    <cr-question label="Q3810.label" cr-conditionned="Q3810">
+        <cr-boolean ng-model="getAnswerValue('Q3810').booleanValue"></cr-boolean>
+    </cr-question>
 
 
 
 
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">Yes</button>
-    <button class="btn btn-warning" ng-click="cancel()">No</button>
+    <button class="btn btn-primary" ng-click="close()" ng-bind-html="'generic.close' | translate"></button>
 </div>
