--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/t05-dinner.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/t05-dinner.html
@@ -5,17 +5,29 @@
 </div>
 <div class="modal-body">
 
-    <cr-question label="Q1140.label">
-        <cr-slider ng-model="getAnswerValue('Q1140','FIRST').stringValue" ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
-        <cr-slider ng-model="getAnswerValue('Q1140','SECOND').stringValue"  ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
-        <cr-slider ng-model="getAnswerValue('Q1140','THIRD').stringValue" ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
-    </cr-question>
+    <cr-section label="Q1140.label">
+        <cr-question label="period.1.label">
+            <cr-slider ng-model="getAnswerValue('Q1140','FIRST').stringValue" ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
+        </cr-question>
+        <cr-question label="period.2.label">
+            <cr-slider ng-model="getAnswerValue('Q1140','SECOND').stringValue"  ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
+        </cr-question>
+        <cr-question label="period.3.label">
+            <cr-slider ng-model="getAnswerValue('Q1140','THIRD').stringValue" ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
+        </cr-question>
+    </cr-section>
 
-    <cr-question label="Q1150.label">
-        <cr-slider ng-model="getAnswerValue('Q1150','FIRST').stringValue" ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
-        <cr-slider ng-model="getAnswerValue('Q1150','SECOND').stringValue"  ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
-        <cr-slider ng-model="getAnswerValue('Q1150','THIRD').stringValue" ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
-    </cr-question>
+    <cr-section label="Q1150.label">
+        <cr-question label="period.1.label">
+            <cr-slider ng-model="getAnswerValue('Q1150','FIRST').stringValue" ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
+        </cr-question>
+        <cr-question label="period.2.label">
+            <cr-slider ng-model="getAnswerValue('Q1150','SECOND').stringValue"  ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
+        </cr-question>
+        <cr-question label="period.3.label">
+            <cr-slider ng-model="getAnswerValue('Q1150','THIRD').stringValue" ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
+        </cr-question>
+    </cr-section>
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="close()" ng-bind-html="'generic.close' | translate"></button>
