--- a/app/eu/factorx/citizens/angular/views/household/actions/topics/actions-presence.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/topics/actions-presence.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <img class="cr-modal-title-icon" src="/assets/images/modal/topic01_title.png" alt=""/>
+    <img class="cr-modal-title-icon" src="/assets/images/modal/topic_presence_title.png" alt=""/>
     <img class="cr-modal-title-separator" src="/assets/images/modal/title_verticalSeparator.png" alt=""/>
     <h3 class="modal-title cr-modal-title-text" ng-bind-html="'topic.presence.label' | translate"></h3>
 </div>
@@ -9,7 +9,7 @@
         <cr-boolean ng-model="getAnswerValue('Q3210').booleanValue"></cr-boolean>
     </cr-question>
 
-    <cr-question label="Q3211.label" cr-conditionned="Q3211" >
+    <cr-question label="Q3211.label" cr-conditioned="Q3211" >
         <cr-slider ng-model="getAnswerValue('Q3211').stringValue" ng-steps="getNumericOptions('Q3211',1,4,1)"></cr-slider>
     </cr-question>
 
