--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -5,6 +5,9 @@
 @import "_cr-text";
 @import "_cr-modal";
 @import "_cr-welcome";
+@import "_cr-profile";
+@import "_cr-actions";
+
 
 img {
     max-width: 100%;
