--- a/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
@@ -1,30 +1,33 @@
-<div class="cr-profile">
+<div class="cr-actions">
 
     <div class="container">
 
-        <div class="row cr-profile-header">
+        <div class="row cr-actions-header">
 
             <div class="col-md-6">
-                <h1>Ménage > Profil de consommation</h1>
+                <h1>Ménage > Actions</h1>
             </div>
 
             <div class="col-md-6 cr-navigation">
-                <button ng-click="load()"> Login</button>
+                <button ng-bind-html="'nav.back-to-profile' | translate"
+                        ng-click="$root.redirectTo('/household-profile')">
+                </button>
 
-                <button ng-bind-html="'nav.to-actions' | translate"
-                        ng-click="$root.redirectTo('/household-actions')">
+                <button ng-bind-html="'nav.to-identification' | translate"
+                        ng-click="openModal('household/account/registration')">
                 </button>
             </div>
 
         </div>
 
-        <div class="row cr-profile-content">
+        <div class="row cr-actions-content">
 
             <div class="col-md-1">&nbsp;</div>
+
             <div class="col-md-2 col-sm-4 col-xs-6">
                 <cr-topic
                         image="household/topics/topic_presence"
-                        view="$/angular/views/household/profile/topics/profile-presence.html"
+                        view="$/angular/views/household/actions/topics/actions-presence.html"
                         controller="ModalTopicCtrl"
                         window-class="cr-theme-green"
                         label="topic.presence.label"
@@ -35,7 +38,7 @@
             <div class="col-md-2 col-sm-4 col-xs-6">
                 <cr-topic
                         image="household/topics/topic_programs"
-                        view="$/angular/views/household/profile/topics/profile-programs.html"
+                        view="$/angular/views/household/actions/topics/actions-programs.html"
                         controller="ModalTopicCtrl"
                         window-class="cr-theme-blue"
                         label="topic.programs.label"
@@ -45,7 +48,7 @@
             <div class="col-md-2 col-sm-4 col-xs-6">
                 <cr-topic
                         image="household/topics/topic_heating"
-                        view="$/angular/views/household/profile/topics/profile-heating.html"
+                        view="$/angular/views/household/actions/topics/actions-heating.html"
                         controller="ModalTopicCtrl"
                         window-class="cr-theme-red"
                         label="topic.heating.label"
@@ -56,7 +59,7 @@
                 <cr-topic
                         active="true"
                         image="household/topics/topic_lighting"
-                        view="$/angular/views/household/profile/topics/profile-lighting.html"
+                        view="$/angular/views/household/actions/topics/actions-lighting.html"
                         controller="ModalTopicCtrl"
                         window-class="cr-theme-orange"
                         label="topic.lighting.label"
@@ -66,15 +69,16 @@
             <div class="col-md-2 col-sm-4 col-xs-6">
                 <cr-topic
                         image="household/topics/topic_dinner"
-                        view="$/angular/views/household/profile/topics/profile-dinner.html"
+                        view="$/angular/views/household/actions/topics/actions-dinner.html"
                         controller="ModalTopicCtrl"
                         window-class="cr-theme-magenta"
                         label="topic.dinner.label"
                         ></cr-topic>
             </div>
+
             <div class="col-md-1">&nbsp;</div>
 
         </div>
-    </div>
 
+    </div>
 </div>
