--- a/app/eu/factorx/citizens/angular/views/household/actions/topics/actions-dinner.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/topics/actions-dinner.html
@@ -1,46 +1,46 @@
 <div class="modal-header">
-    <img class="cr-modal-title-icon" src="/assets/images/modal/topic01_title.png" alt=""/>
+    <img class="cr-modal-title-icon" src="/assets/images/modal/topic_dinner_title.png" alt=""/>
     <img class="cr-modal-title-separator" src="/assets/images/modal/title_verticalSeparator.png" alt=""/>
-    <h3 class="modal-title cr-modal-title-text" ng-bind-html="'topic.cook.label' | translate"></h3>
+    <h3 class="modal-title cr-modal-title-text" ng-bind-html="'topic.dinner.label' | translate"></h3>
 </div>
 <div class="modal-body">
 
 
-    <cr-question label="Q3710.label"  cr-conditionned="Q3710">
+    <cr-question label="Q3710.label" cr-conditioned="Q3710">
         <cr-boolean ng-model="getAnswerValue('Q3710').booleanValue"></cr-boolean>
     </cr-question>
 
 
-    <cr-question label="Q3711.label"  cr-conditionned="Q3711">
+    <cr-question label="Q3711.label" cr-conditioned="Q3711">
         <cr-boolean ng-model="getAnswerValue('Q3711').booleanValue"></cr-boolean>
     </cr-question>
 
 
-    <cr-question label="Q3720.label"  cr-conditionned="Q3720">
+    <cr-question label="Q3720.label" cr-conditioned="Q3720">
         <cr-boolean ng-model="getAnswerValue('Q3720').booleanValue"></cr-boolean>
     </cr-question>
 
 
-    <cr-question label="Q3730.label"  cr-conditionned="Q3730">
+    <cr-question label="Q3730.label" cr-conditioned="Q3730">
         <cr-boolean ng-model="getAnswerValue('Q3730').booleanValue"></cr-boolean>
     </cr-question>
 
 
-    <cr-question label="Q3750.label"  cr-conditionned="Q3750">
+    <cr-question label="Q3750.label" cr-conditioned="Q3750">
         <cr-boolean ng-model="getAnswerValue('Q3750').booleanValue"></cr-boolean>
     </cr-question>
 
-    <cr-question label="Q3760.label"  cr-conditionned="Q3760">
+    <cr-question label="Q3760.label" cr-conditioned="Q3760">
         <cr-boolean ng-model="getAnswerValue('Q3760').booleanValue"></cr-boolean>
     </cr-question>
 
 
-    <cr-question label="Q3740.label"  cr-conditionned="Q3740">
+    <cr-question label="Q3740.label" cr-conditioned="Q3740">
         <cr-boolean ng-model="getAnswerValue('Q3740').booleanValue"></cr-boolean>
     </cr-question>
 
 
-    <cr-question label="Q3741.label"  cr-conditionned="Q3741">
+    <cr-question label="Q3741.label" cr-conditioned="Q3741">
         <cr-boolean ng-model="getAnswerValue('Q3741').booleanValue"></cr-boolean>
     </cr-question>
 
