--- a/app/eu/factorx/citizens/angular/views/household/actions/topics/actions-lighting.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/topics/actions-lighting.html
@@ -1,52 +1,52 @@
 <div class="modal-header">
-    <img class="cr-modal-title-icon" src="/assets/images/modal/topic01_title.png" alt=""/>
+    <img class="cr-modal-title-icon" src="/assets/images/modal/topic_lighting_title.png" alt=""/>
     <img class="cr-modal-title-separator" src="/assets/images/modal/title_verticalSeparator.png" alt=""/>
-    <h3 class="modal-title cr-modal-title-text" ng-bind-html="'topic.light.label' | translate"></h3>
+    <h3 class="modal-title cr-modal-title-text" ng-bind-html="'topic.lighting.label' | translate"></h3>
 </div>
 <div class="modal-body">
 
-    <cr-question label="Q3410.label"  cr-conditionned="Q3410">
+    <cr-question label="Q3410.label"  cr-conditioned="Q3410">
         <cr-boolean ng-model="getAnswerValue('Q3410').booleanValue"></cr-boolean>
     </cr-question>
 
-    <cr-question label="Q3420.label" cr-conditionned="Q3420">
+    <cr-question label="Q3420.label" cr-conditioned="Q3420">
         <cr-boolean ng-model="getAnswerValue('Q3420').booleanValue"></cr-boolean>
     </cr-question>
 
-    <cr-question label="Q3510.label" cr-conditionned="Q3510">
+    <cr-question label="Q3510.label" cr-conditioned="Q3510">
         <cr-boolean ng-model="getAnswerValue('Q3510').booleanValue"></cr-boolean>
     </cr-question>
 
-    <cr-question label="Q3530.label" cr-conditionned="Q3530">
+    <cr-question label="Q3530.label" cr-conditioned="Q3530">
         <cr-boolean ng-model="getAnswerValue('Q3530').booleanValue"></cr-boolean>
     </cr-question>
 
-    <cr-question label="Q3610.label" cr-conditionned="Q3610">
+    <cr-question label="Q3610.label" cr-conditioned="Q3610">
         <cr-boolean ng-model="getAnswerValue('Q3610').booleanValue"></cr-boolean>
     </cr-question>
 
 
-    <cr-question label="Q3620.label" cr-conditionned="Q3620">
+    <cr-question label="Q3620.label" cr-conditioned="Q3620">
         <cr-boolean ng-model="getAnswerValue('Q3620').booleanValue"></cr-boolean>
     </cr-question>
 
 
-    <cr-question label="Q3630.label" cr-conditionned="Q3630">
+    <cr-question label="Q3630.label" cr-conditioned="Q3630">
         <cr-boolean ng-model="getAnswerValue('Q3630').booleanValue"></cr-boolean>
     </cr-question>
 
 
-    <cr-question label="Q3631.label" cr-conditionned="Q3631">
+    <cr-question label="Q3631.label" cr-conditioned="Q3631">
         <cr-boolean ng-model="getAnswerValue('Q3631').booleanValue"></cr-boolean>
     </cr-question>
 
 
-    <cr-question label="Q3640.label" cr-conditionned="Q3640">
+    <cr-question label="Q3640.label" cr-conditioned="Q3640">
         <cr-boolean ng-model="getAnswerValue('Q3640').booleanValue"></cr-boolean>
     </cr-question>
 
 
-    <cr-question label="Q3810.label" cr-conditionned="Q3810">
+    <cr-question label="Q3810.label" cr-conditioned="Q3810">
         <cr-boolean ng-model="getAnswerValue('Q3810').booleanValue"></cr-boolean>
     </cr-question>
 
