--- a/app/eu/factorx/citizens/angular/views/household/actions/topics/actions-programs.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/topics/actions-programs.html
@@ -1,19 +1,19 @@
 <div class="modal-header">
-    <img class="cr-modal-title-icon" src="/assets/images/modal/topic01_title.png" alt=""/>
+    <img class="cr-modal-title-icon" src="/assets/images/modal/topic_programs_title.png" alt=""/>
     <img class="cr-modal-title-separator" src="/assets/images/modal/title_verticalSeparator.png" alt=""/>
     <h3 class="modal-title cr-modal-title-text" ng-bind-html="'topic.programs.label' | translate"></h3>
 </div>
 <div class="modal-body">
 
-    <cr-question label="Q3110.label"  cr-conditionned="Q3110">
+    <cr-question label="Q3110.label" cr-conditioned="Q3110">
         <cr-boolean ng-model="getAnswerValue('Q3110').booleanValue"></cr-boolean>
     </cr-question>
 
-    <cr-question label="Q3120.label" cr-conditionned="Q3120">
+    <cr-question label="Q3120.label" cr-conditioned="Q3120">
         <cr-boolean ng-model="getAnswerValue('Q3120').booleanValue"></cr-boolean>
     </cr-question>
 
-    <cr-question label="Q3130.label" cr-conditionned="Q3130">
+    <cr-question label="Q3130.label" cr-conditioned="Q3130">
         <cr-boolean ng-model="getAnswerValue('Q3130').booleanValue"></cr-boolean>
     </cr-question>
     
