--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-dinner.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-dinner.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
-    <img class="cr-modal-title-icon" src="/assets/images/modal/topic05_title.png" alt=""/>
+    <img class="cr-modal-title-icon" src="/assets/images/modal/topic_dinner_title.png" alt=""/>
     <img class="cr-modal-title-separator" src="/assets/images/modal/title_verticalSeparator.png" alt=""/>
-    <h3 class="modal-title cr-modal-title-text"  ng-bind-html="'topic.cook.label' | translate"></h3>
+    <h3 class="modal-title cr-modal-title-text"  ng-bind-html="'topic.dinner.label' | translate"></h3>
 </div>
 <div class="modal-body">
 
