--- a/app/eu/factorx/citizens/angular/views/welcome.html
+++ b/app/eu/factorx/citizens/angular/views/welcome.html
@@ -34,4 +34,16 @@
         </div>
     </div>
 
+    <!-- Controls demo -->
+    <br/> <br/> <br/> <br/> <br/> <br/> <br/>
+    <hr/>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-left">
+                <a href="#/controls-demo">Controls demo ></a>
+            </div>
+        </div>
+    </div>
+
+
 </div>
