Added "completed topic" style Fixed css problem related to :active state

--- a/app/assets/_cr-topic.less
+++ b/app/assets/_cr-topic.less
@@ -71,11 +71,11 @@
         opacity: 0.0;
     }
 
-    &:active:not(:hover) .cr-topic-image-active {
+    &.active:not(:hover) .cr-topic-image-active {
         opacity: 1.0;
     }
 
-    &:active:not(:hover) .cr-topic-image-inactive {
+    &.active:not(:hover) .cr-topic-image-inactive {
         opacity: 0.0;
     }
 
