--- a/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
@@ -28,6 +28,7 @@
                         controller="ModalTopicCtrl"
                         window-class="cr-theme-green"
                         label="topic.presence.label"
+                        active="{{ isTopicCompleted('presence') }}"
                         ></cr-topic>
             </div>
 
@@ -39,6 +40,7 @@
                         controller="ModalTopicCtrl"
                         window-class="cr-theme-blue"
                         label="topic.programs.label"
+                        active="{{ isTopicCompleted('programs') }}"
                         ></cr-topic>
             </div>
 
@@ -49,17 +51,18 @@
                         controller="ModalTopicCtrl"
                         window-class="cr-theme-red"
                         label="topic.heating.label"
+                        active="{{ isTopicCompleted('heating') }}"
                         ></cr-topic>
             </div>
 
             <div class="col-md-2 col-sm-4 col-xs-6">
                 <cr-topic
-                        active="true"
                         image="household/topics/topic_lighting"
                         view="$/angular/views/household/profile/topics/profile-lighting.html"
                         controller="ModalTopicCtrl"
                         window-class="cr-theme-orange"
                         label="topic.lighting.label"
+                        active="{{ isTopicCompleted('lighting') }}"
                         ></cr-topic>
             </div>
 
@@ -70,6 +73,7 @@
                         controller="ModalTopicCtrl"
                         window-class="cr-theme-magenta"
                         label="topic.dinner.label"
+                        active="{{ isTopicCompleted('dinner') }}"
                         ></cr-topic>
             </div>
             <div class="col-md-1">&nbsp;</div>
