--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-lighting.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-lighting.html
@@ -29,7 +29,7 @@
         <cr-slider ng-model="getAnswerValue('Q1750').stringValue" ng-steps="getOptions('Q1750')" vertical="true"></cr-slider>
     </cr-question>
     <cr-question label="Q1800.label">
-        <cr-slider ng-model="Q1800" min="0" max="1000" step="10" filter="toWatts"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1800').doubleValue" min="0" max="1000" step="10" filter="toWatts"></cr-slider>
     </cr-question>
 
     <cr-section label="Q2000.label">
