--- a/app/assets/_cr-actions.less
+++ b/app/assets/_cr-actions.less
@@ -5,31 +5,20 @@
         .cr-navigation {
             padding-top: 15px;
             text-align: right;
-            button {
-                padding: 3px 10px;
-                min-width: 100px;
-                border-radius: 10px;
-                font-size: 18px;
-                background-color: #1494d0;
-                color: black;
-                border: none;
-                &:hover {
-                    background-color: #1184BA;
-                    color: white;
-                }
+
+            .cr-actions-profile-link {
+                cursor: pointer;
+            }
+
+            .cr-actions-register-link {
+                cursor: pointer;
             }
         }
 
-        h1 {
+        .cr-actions-title {
             font-size: 26px;
             font-weight: bold;
         }
-
-        h2 {
-            font-size: 20px;
-            font-weight: bold;
-        }
-
     }
 
     .cr-actions-content {
