--- a/app/assets/_cr-modal.less
+++ b/app/assets/_cr-modal.less
@@ -1,11 +1,14 @@
-.generate-cr-slider-theme(~'default', #000000);
-.generate-cr-slider-theme(~'blue', #1494d0);
-.generate-cr-slider-theme(~'green', #229913);
-.generate-cr-slider-theme(~'orange', #ff7800);
-.generate-cr-slider-theme(~'red', #d22323);
-.generate-cr-slider-theme(~'magenta', #831cb2);
+.generate-cr-modal-theme(~'default', #000000);
+.generate-cr-modal-theme(~'blue', #1494d0);
+.generate-cr-modal-theme(~'green', #229913);
+.generate-cr-modal-theme(~'orange', #ff7800);
+.generate-cr-modal-theme(~'red', #d22323);
+.generate-cr-modal-theme(~'magenta', #831cb2);
 
-.generate-cr-slider-theme(@name, @color) {
+.generate-cr-modal-theme(~'gray', #555555);
+
+
+.generate-cr-modal-theme(@name, @color) {
     .cr-theme-@{name} {
 
         .modal-content {
