--- a/app/assets/_cr-profile.less
+++ b/app/assets/_cr-profile.less
@@ -5,28 +5,19 @@
         .cr-navigation {
             padding-top: 15px;
             text-align: right;
-            button {
-                padding: 3px 10px;
-                min-width: 100px;
-                border-radius: 10px;
-                font-size: 18px;
-                background-color: #1494d0;
-                color: black;
-                border: none;
-                &:hover {
-                    background-color: #1184BA;
-                    color: white;
-                }
+
+            .cr-profile-login-link {
+                cursor: pointer;
             }
+
+            .cr-profile-actions-link {
+                cursor: pointer;
+            }
+
         }
 
-        h1 {
+        .cr-profile-title {
             font-size: 26px;
-            font-weight: bold;
-        }
-
-        h2 {
-            font-size: 20px;
             font-weight: bold;
         }
 
